<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/article_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/primary"
                android:text="@string/article_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="324dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="-3dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/imagen_del_artista"
                android:scaleType="centerCrop"
                android:src="@drawable/chebenington" />

            <TextView
                android:id="@+id/article_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:text="@string/artist_one_name"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/content_article_artist_one"
                tools:ignore="VisualLintLongText" />

            <Button
                android:id="@+id/btn_anterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/boton_anterior"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btn_siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/primary"
                android:text="@string/boton_siguiente"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />
            />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>